correct form input background in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   text-align: center;
 }
 
+form input {
+  background-color: white;
+}
+
 form input:focus {
   outline: 2px solid green;
 }
