--- a/src/index.css
+++ b/src/index.css
@@ -36,4 +36,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+  form input {
+    background-color: white;
+  }
 }
